Added sass & tailwindcss, updated store

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import './variables';
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;900&display=swap');
 
+@import './variables';
 @import './components/all';
 
 .header {
-    background: #6976d9;
+  background: #6976d9;
 }
